# PuuiyGame

./: AGENT.md  README.md  puuiy.py  test_lang.piy
compiler/: ast_nodes.py  builtins.py  interpreter.py  lexer.py  parser.py
engine/anim/: keyframe.piy  particle.piy  tween.piy  tween_manager.piy
engine/core/: audio.piy  camera.piy  content_manager.piy  game.piy  input.piy  networking.piy  node.piy  scene.piy  scene_tree.piy  signal.piy  tilemap.piy
engine/ecs/: component.piy  entity.piy  system.piy  systems.piy  world.piy
engine/native/: CMakeLists.txt  puuiy_engine.i  renderer.cpp  renderer.h
engine/physics/: physics_2d.piy
engine/render/: animated_sprite.piy  label.piy  layer.piy  renderer.piy  sprite.piy
engine/shaders/: basic.hlsl  postprocess.hlsl  sprite.hlsl
engine/ui/: css_engine.piy  default_theme.css  ui_node.piy  widgets.piy
examples/ecs_demo/: main.piy
examples/platformer/: main.piy
vscode-puuiy/: .vscodeignore  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-puuiy/snippets/: piy.json
vscode-puuiy/src/: extension.ts
vscode-puuiy/syntaxes/: piy.tmLanguage.json
